# Magnetics

./: Commands.py  Interferometer_test.py  README.md  Util.py  appUI.ui  main.py  pyproject.toml
Interferometer/: Interferometer.py  Interferometer_sim.py
gmw_5972/: gmw_5972.py  gmw_5972_controller.py  gmw_5972_sim.py  magnet_control.py  main.py
proscan_stage/: Stage.py  Stage_sim.py  prior_interface.py
py_ui/: Commands.py  MainWindow.py  PeriodicDisplay.py  SavedValue.py  StatusLight.py  SyncedCheckBox.py  SyncedSavedValue.py  SyncedSpinBox.py  app.py  slots.py
qt_ui/: main_window.ui  ui_main_window.py
qt_widgets/: register_widgets.py
qt_widgets/status_label/: QStatusLabel.py  StatusLabelPlugin.py
